--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <meta charset="utf-8">
 
 <script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="https://distill.pub/template.v2.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
-
+<script src="template.v2.js"></script>
+<script src="transforms.v2.js"></script>
 
 <link rel="stylesheet" href="style.css">
 
@@ -55,7 +55,16 @@
   <!-- Modify  grid-row-end: 6; for #toc in styles.css if h2 below looks strange -->
 
   <h2 style="grid-column-start: 4">Getting Started</h2>
-  <p>Download and modify this file.</p>
+  <p>This is a template for presenting technical content through an interactive
+    medium.
+    A large amount of the work used here has been taken from the
+    <a href="https://distill.pub" target="_blank">Distill journal</a>.
+    <a href="https://github.com/distillpub/template/releases/tag/v2.8.0">
+      Release v2.8.0 has been used here.
+    </a>
+  </p>
+
+  <p></p>
 
   <h2>Section Heading</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -172,9 +181,7 @@
           end
     &lt;/div&gt;
   </d-code>
-  <p>See <a href="https://mermaid-js.github.io/mermaid/#/n00b-syntaxReference" target="_blank">
-  MermaidJS diagram syntax</a> for more examples and diagram types.</p>
-
+  <p>or a <a href="https://en.wikipedia.org/wiki/State_diagram">State Chart</a></p>
   <div class="mermaid">
     %%{init: {'theme':'neutral'}}%%
     stateDiagram-v2
@@ -190,6 +197,8 @@
   <p>
     Change layout from <code>graph LR</code> to <code>graph TD</code>
     for a vertical graph.
+    See <a href="https://mermaid-js.github.io/mermaid/#/n00b-syntaxReference" target="_blank">
+    MermaidJS diagram syntax</a> for more examples and diagram types.
   </p>
 
   <h3 id="d3-graphs">D3 Graphs</h3>
