Move distill JS into separate folder

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
-<script src="template.v2.js"></script>
-<script src="transforms.v2.js"></script>
+<script src="distill/template.v2.js"></script>
+<script src="distill/transforms.v2.js"></script>
 
 <link rel="stylesheet" href="style.css">
 
@@ -15,16 +15,16 @@
     "published": "March 26, 2021",
     "authors": [
       {
-        "author": "Sumanas Sarma",
+        "author": "Jane Doe",
         "authorURL": "https://",
-        "affiliation": "",
+        "affiliation": "Company X",
         "affiliationURL": "https://"
       },
       {
-        "author": "Serge Plata",
+        "author": "John Doe",
         "authorURL": "https://",
-        "affiliation": "Infosys Consulting",
-        "affiliationURL": "https://www.infosys.com/services/consulting.html"
+        "affiliation": "Company Y",
+        "affiliationURL": "https://"
       }
     ],
     "katex": {
@@ -63,8 +63,6 @@
       Release v2.8.0 has been used here.
     </a>
   </p>
-
-  <p></p>
 
   <h2>Section Heading</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
